# salalib

./: .clang-tidy  CMakeLists.txt  README.md  REUSE.toml  alllinemap.cpp  alllinemap.h  alllinemap.hpp  analysisresult.h  analysisresult.hpp  attributemap.h  attributemap.hpp  attributetable.cpp  attributetable.h  attributetable.hpp  attributetablehelpers.h  attributetablehelpers.hpp  attributetableindex.cpp  attributetableindex.h  attributetableindex.hpp  attributetableview.cpp  attributetableview.h  attributetableview.hpp  axialmap.cpp  axialmap.h  axialminimiser.cpp  axialminimiser.h  axialminimiser.hpp  axialpolygons.cpp  axialpolygons.h  axialpolygons.hpp  bspnodetree.h  bspnodetree.hpp  bsptree.cpp  bsptree.h  comm.h  connector.cpp  connector.h  connector.hpp  containerutils.h  displayparams.h  (+123 more)
.githooks/: pre-commit
.reuse/: dep5
_layouts/: default.html
agents/: CMakeLists.txt  agent.cpp  agent.h  agent.hpp  agentanalysis.cpp  agentanalysis.h  agentanalysis.hpp  agentengine.cpp  agentengine.h  agentga.cpp  agentga.h  agenthelpers.h  agentprogram.cpp  agentprogram.h  agentprogram.hpp  agentset.cpp  agentset.h
axialmodules/: CMakeLists.txt  axialintegration.cpp  axialintegration.h  axialintegration.hpp  axiallocal.cpp  axiallocal.h  axiallocal.hpp  axialstepdepth.cpp  axialstepdepth.h  axialstepdepth.hpp
genlib/: CMakeLists.txt  bsptree.cpp  bsptree.h  bsptree.hpp  comm.h  comm.hpp  containerutils.h  containerutils.hpp  edgeu.cpp  edgeu.h  event2f.h  exceptions.hpp  line4f.cpp  line4f.h  line4f.hpp  p2dpoly.cpp  p2dpoly.h  pafmath.cpp  pafmath.h  pafmath.hpp  pflipper.h  pflipper.hpp  point2f.cpp  point2f.h  point2f.hpp  point3f.hpp  poly.cpp  poly.h  poly.hpp  readwritehelpers.hpp  region4f.cpp  region4f.h  region4f.hpp  regiontree.cpp  regiontree.h  regiontree.hpp  simpleline.h  simpleline.hpp  simplematrix.hpp  stringutils.cpp  (+3 more)
parsers/: CMakeLists.txt  dxfp.cpp  dxfp.h  dxfp.hpp  mapinfodata.cpp  mapinfodata.h  mapinfodata.hpp  ntfp.cpp  ntfp.h  ntfp.hpp  tigerp.cpp  tigerp.h  tigerp.hpp
resources/: graph.grammar  graph.hexpat
segmmodules/: CMakeLists.txt  segmangular.cpp  segmangular.h  segmangular.hpp  segmhelpers.h  segmhelpers.hpp  segmmetric.cpp  segmmetric.h  segmmetric.hpp  segmmetricpd.cpp  segmmetricpd.h  segmmetricpd.hpp  segmmetricshortestpath.cpp  segmmetricshortestpath.h  segmmetricshortestpath.hpp  segmtopological.cpp  segmtopological.h  segmtopological.hpp  segmtopologicalpd.cpp  segmtopologicalpd.h  segmtopologicalpd.hpp  segmtopologicalshortestpath.cpp  segmtopologicalshortestpath.h  segmtopologicalshortestpath.hpp  segmtulip.cpp  segmtulip.h  segmtulip.hpp  segmtulipdepth.cpp  segmtulipdepth.h  segmtulipdepth.hpp  segmtulipleafchoice.cpp  segmtulipleafchoice.hpp  segmtulipshortestpath.cpp  segmtulipshortestpath.h
vgamodules/: CMakeLists.txt  extractlinkdata.cpp  extractlinkdata.h  extractlinkdata.hpp  ianalysisvgaangular.h  ianalysisvgametric.h  ianalysisvgavisual.h  ivga.h  ivga.hpp  ivgaangular.h  ivgaangular.hpp  ivgametric.h  ivgametric.hpp  ivgatraversing.h  ivgatraversing.hpp  ivgavisual.h  ivgavisual.hpp  vgaangular.cpp  vgaangular.h  vgaangular.hpp  vgaangulardepth.cpp  vgaangulardepth.h  vgaangulardepth.hpp  vgaangularopenmp.cpp  vgaangularopenmp.h  vgaangularopenmp.hpp  vgaangularshortestpath.cpp  vgaangularshortestpath.h  vgaangularshortestpath.hpp  vgaisovist.cpp  vgaisovist.h  vgaisovist.hpp  vgaisovistzone.cpp  vgaisovistzone.h  vgaisovistzone.hpp  vgametric.cpp  vgametric.h  vgametric.hpp  vgametricdepth.cpp  vgametricdepth.h  (+37 more)
